--- a/segunda-feira.html
+++ b/segunda-feira.html
@@ -142,7 +142,18 @@
         </p>
 
         <h1>6. Sincronizando VSCode e GitHub usando o GIT</h1>
-        <p>Abra seu <a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer"></a> na pasta escolhida. 
+        <p>Abra seu <a href="https://code.visualstudio.com/" target="_blank" rel="noopener noreferrer"></a> na pasta onde você realizou a clonagem do repositório. Clique no ícone de usuário na sua barra lateral, <span class="code1">Backup and Sync Settings</span>
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-41.png?raw=true" alt="">
+        Clique em <span class="code1">Sign in</span>.
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-41_1.png?raw=true" alt="">
+        Clique em <span class="code1">Sign in with GitHub</span>.
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-41_2.png?raw=true" alt="">
+        Uma página será aberta no seu navegador. Realize os processos necessários.
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-44.png?raw=true" alt="">
+        Abra o link em seu VSCode.
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-44_1.png?raw=true" alt="">
+        Pronto! Ao clicar no ícone de perfil novamente, você pode ver sua conta.
+
         </p>
         <hr>
         <h3>Links úteis:</h3>
