--- a/segunda-feira.html
+++ b/segunda-feira.html
@@ -153,7 +153,9 @@
         Abra o link em seu VSCode.
         <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-44_1.png?raw=true" alt="">
         Pronto! Ao clicar no ícone de perfil novamente, você pode ver sua conta.
-
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-47.png?raw=true" alt="">
+        Você pode sincronizar seus arquivos ao clicar em <span class="code1">Commit</span>:
+        <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-14_14-51.png?raw=true" alt="">
         </p>
         <hr>
         <h3>Links úteis:</h3>
