--- a/segunda-feira.html
+++ b/segunda-feira.html
@@ -154,7 +154,7 @@
         <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-44_1.png?raw=true" alt="">
         Pronto! Ao clicar no ícone de perfil novamente, você pode ver sua conta.
         <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-10_15-47.png?raw=true" alt="">
-        Você pode enviar seus arquivos ao clicar em <span class="code1">Commit</span>:
+        Você pode enviar seus arquivos ao clicar em <span class="code1">Commit</span> e sincroniza-los com o repositório clicando em <span class="code1"></span>
         <img src="https://github.com/nuvem66/noticias/blob/main/2024-10-14_14-51.png?raw=true" alt="">
         </p>
         <hr>
